# bc-ur-rust

./: CLA.md  Cargo.toml  README.md
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
src/: bytewords.rs  error.rs  lib.rs  multipart_decoder.rs  multipart_encoder.rs  preamble.rs  prelude.rs  ur.rs  ur_codable.rs  ur_decodable.rs  ur_encodable.rs  ur_type.rs  utils.rs
