[package]
name = "bc-ur"
version = "0.6.0"
edition = "2021"
description = "Uniform Resources (UR) for Rust."
authors = ["Blockchain Commons"]
keywords = ["encoding", "cbor", "binary", "format", "serialization"]
repository = "https://github.com/BlockchainCommons/bc-ur-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
categories = ["data-structures", "encoding"]
documentation = "https://docs.rs/bc-ur"

[dependencies]
dcbor = "^0.16.0"

ur = "^0.4.1"
thiserror = "^1.0.48"
anyhow = "^1.0.0"

[dev-dependencies]
version-sync = "^0.9.0"
