[package]
name = "bc-ur"
version = "0.7.0"
edition = "2024"
description = "Uniform Resources (UR) for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-ur-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-ur"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = ["data-structures", "encoding"] # https://crates.io/category_slugs

[dependencies]
dcbor = "^0.17.0"

ur = "^0.4.1"
thiserror = "^1.0.48"

[dev-dependencies]
version-sync = "^0.9.0"
